<resources>
    <string name="app_name">Calculadora de Gorjetas</string>
    <string name="conta">Conta</string>
    <string name="explicacao1">Abaixo, estão os valores típicos de gorjeta</string>
    <string name="percentual">Percentual: </string>
    <string name="gorjeta">Gorjeta</string>
    <string name="explicacao2">Defina uma gorjeta de alor peronalizado</string>
    <string name="RA1">F056JG2 - Déborah Neto Leite</string>
    <string name="ra2">F0354F3 - Everlyn Barros Yamamoto</string>
</resources>