<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1, 2, 3">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/conta"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/contaEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="4"
                    android:focusable="false"
                    android:text="@string/explicacao1"
                    android:textColor="#000"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/percentual"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editTextNumberDecimal2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:text="5"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editTextNumberDecimal3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:text="10"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editTextNumberDecimal4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:text="15"
                    android:textSize="14sp"
                    android:focusable="false" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gorjeta"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/ngorjeta5EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/gorjeta10EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editTextNumberDecimal7gorjeta15EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="4"
                    android:text="@string/explicacao2"
                    android:textColor="#000"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/percentual"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <SeekBar
                    android:id="@+id/percentualSeekBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_span="2" />

                <EditText
                    android:id="@+id/percentualEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow7"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gorjeta"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/gorjetaEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:focusable="false"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:textSize="14sp" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>